--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
 
 .pc-hero{display: none;}
 
-.mobile-hero{height: 100vh;}
+.mobile-hero{height: 90vh;}
 
 .mobile-hero > header{display: flex;
     justify-content: space-between;
@@ -158,10 +158,9 @@ z-index: -1;}
 footer > hr{margin: 10px 0px 30px;}
 
 .footer-header{display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    flex-direction: column;
+    gap: 25px;
     padding: 20px 0px 30px;
-    flex-direction: row;
     align-items: center;
     justify-content: center;}
 
