--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
 
 .pc-hero{display: none;}
 
-.mobile-hero{height: 92vh;}
+.mobile-hero{height: 93vh;}
 
 .mobile-hero > header{display: flex;
     justify-content: space-between;
@@ -15,7 +15,17 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
 
 .mobile-hero > header > img{object-fit: contain;}
 
-.mobile-hero > header > nav{display: none;}
+.mobile-hero > header > nav{position: fixed;
+top: 90px; 
+left:0;
+right: 0;
+width: 100%;
+height: 100%;
+z-index: 10;
+background-color: #252130;
+display: none;}
+
+.body{}
 
 .mobile-hero > .hero-info {height: 90%;}
 
@@ -44,7 +54,7 @@ right: 0;}
 
 .hero-info-content > .hero-info-texts{
     animation: fadein ;
-    animation-duration: 5s;}
+    animation-duration: 3s;}
 
 @keyframes fadein {
 from {opacity: 0;} 
@@ -97,7 +107,7 @@ padding: 10px 0px 40px;}
     display: flex;
     gap: 10px;
     flex-direction: column;
-padding: 20px 5px;}
+padding: 40px 5px;}
 
 .box-flex > .box > .box-text{
 display: flex;
@@ -144,6 +154,9 @@ z-index: 0  ;}
         margin-top: 15px;
         text-transform: uppercase;
         transition: .5s;}
+
+        .find-out-more > div >  button:active{background-color: white;
+            color: #2c2640;}
 
 footer{position: relative;
 overflow: hidden;
