--- a/index.css
+++ b/index.css
@@ -3,9 +3,17 @@ margin: 0;
 box-sizing: border-box;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
 
+
+/* base styles */
+h2{font-size: 2rem;}
+
+p{font-size: 0.8rem;
+    line-height: 1.5;}
+
 .pc-hero{display: none;}
 
-.mobile-hero{height: 93vh;}
+.mobile-hero{height: 93vh;
+display: block;}
 
 .mobile-hero > header{display: flex;
     justify-content: space-between;
@@ -22,7 +30,7 @@ transition: .5s;
 
 
 .mobile-hero > header > nav{position: fixed;
-    top: 53px;
+    top: 10%;
     display: none;
     padding-top: 31px;
     left: 0;
@@ -49,7 +57,7 @@ transition: .5s;
 
 .mobile-hero > header > nav > ul >li{
     color: #fff;
-    font-size: 6vw;
+    font-size: 1.5rem;
 }
 
 
@@ -111,7 +119,7 @@ from {opacity: 0;}
 to{opacity: 1;}   
 }
 
-.hero-info-content > .hero-info-texts > h2{font-size:10vw;   
+.hero-info-content > .hero-info-texts > h2{  
      font-family:'Times New Roman', Times, serif;
     animation:drop-and-bounce ;
     padding-bottom: 10px;
@@ -124,7 +132,7 @@ position: relative;}
 70%{top:-5px;}
 100%{top:0;}}
 
-.hero-info-content > .hero-info-texts > p{font-size:4vw; line-height: 1.5; }
+/* .hero-info-content > .hero-info-texts > p{  } */
 
 .hero-info-content > .hero-info-texts > button{background-color: transparent;
 border: 2px solid white;
@@ -250,4 +258,82 @@ padding: 10px 0 30px;}
 font-weight: bold;}
 
 .footer-content-list > ul >li{font-size: 12px;
-color:#252130};
+color:#252130}
+
+
+/*Tablet screen  */
+
+
+    @media screen and (min-width:508px){
+        
+        .pc-hero{display: block;}
+
+        .mobile-hero{display: none;}
+
+        .pc-hero > header{display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 30px;}
+
+    
+
+            .pc-hero > header > nav > ul{display: flex;
+                align-items: center;
+                list-style: none;
+                gap: 40px;}
+
+                .pc-hero > header > nav > ul >li{
+                    font-size: 16px;
+                     text-transform: uppercase;
+                     color: #2c264070;
+                     font-weight: bold;
+                }
+
+                .pc-hero > header > nav > ul >button{
+    border: 2px solid #2c2640;
+    color: #2c2640;
+    background-color: transparent;
+    padding: 5px 10px;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: .5s;}
+
+  button:active{background-color: white;
+            color: #2c2640;}
+
+    .pc-hero > .hero-content{height: 450px;
+        width: 100%;
+        padding: 40px 55% 40px 20px;
+        background-color: #2c2640;
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+
+    .about > h1{font-size: 25px;
+        padding: 10px 0px 40px;}
+
+    .pc-hero > .hero-content > img :nth-child(2){
+        position:absolute;
+        }
+
+
+    .pc-hero > .hero-content > .hero-texts{
+        display: flex;
+        gap: 20px;
+        flex-direction: column;
+    }
+
+    .pc-hero > .hero-content > .hero-texts > div > button{
+        border: 2px solid white;
+        color: white;
+        background-color: transparent;
+        padding: 10px 15px;
+        font-size: 16px;
+        text-transform: uppercase;
+        font-weight: bold;
+        transition: .5s; 
+        }
+
+    }
