--- a/index.css
+++ b/index.css
@@ -5,15 +5,56 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
 
 
 /* base styles */
-h2{font-size: 2rem;}
+h1{font-size: 2.7rem;
+    font-family:'Times New Roman', Times, serif;}
 
-p{font-size: 0.8rem;
+h2{font-size: 2.1rem;
+    font-family:'Times New Roman', Times, serif;
+color: #252130;}
+
+h4{ font-size: 1.8rem;
+    font-family:'Times New Roman', Times, serif;
+color: #252130;}
+p{font-size: 1rem;
     line-height: 1.5;}
 
-.pc-hero{display: none;}
+li{font-size: 1.5rem;}
+
+hr{height:1px;
+color: lightgray;}
+
+
+
 
 .mobile-hero{height: 93vh;
 display: block;}
+
+/* smaller phones */
+    @media screen and (max-width:340px){
+        h1{font-size: 2.4rem;
+            font-family:'Times New Roman', Times, serif;}
+
+            h2{font-size: 1.8rem;
+                font-family:'Times New Roman', Times, serif;}
+
+h4{ font-size: 1.5rem;
+ font-family:'Times New Roman', Times, serif;}
+
+        p{font-size: 0.8rem;
+            line-height: 1.5;}
+ li{font-size: 1.2rem;}
+    }
+
+    /* short phones */
+    @media screen and (max-height:550px){
+        .mobile-hero{height: 100vh;}
+
+        h1{font-size:1.8rem;}
+    }
+
+.pc-hero{display: none;}
+
+
 
 .mobile-hero > header{display: flex;
     justify-content: space-between;
@@ -57,7 +98,6 @@ transition: .5s;
 
 .mobile-hero > header > nav > ul >li{
     color: #fff;
-    font-size: 1.5rem;
 }
 
 
@@ -120,7 +160,6 @@ to{opacity: 1;}
 }
 
 .hero-info-content > .hero-info-texts > h2{  
-     font-family:'Times New Roman', Times, serif;
     animation:drop-and-bounce ;
     padding-bottom: 10px;
     animation-duration: 2s;
@@ -132,7 +171,6 @@ position: relative;}
 70%{top:-5px;}
 100%{top:0;}}
 
-/* .hero-info-content > .hero-info-texts > p{  } */
 
 .hero-info-content > .hero-info-texts > button{background-color: transparent;
 border: 2px solid white;
@@ -156,11 +194,16 @@ color: #2c2640;}
     text-align: center;}
 
 .about > hr{width: 40%;
-    color: lightgray;
-    margin: 0 auto 30px;}
+        margin: 0 auto 30px;}
 
 .about > h1{font-size: 8vw;
 padding: 10px 0px 40px;}
+
+
+.box-flex {
+display: flex;
+flex-direction: column;
+}
 
 .box-flex > .box{
     display: flex;
@@ -174,15 +217,14 @@ flex-direction: column;
 gap: 10px;
 }
 
-.box-flex > .box > .box-text >h4{ font-size: 6vw;
-    font-family:'Times New Roman', Times, serif;}
+
 
 .box-flex > .box > .box-text >p{color:#2c26407c; line-height: 1.5;}
 
 .find-out-more{width: 100%;
     position: relative;
     margin: 50px 0px;
-    height: 350px;
+    min-height: 305px;
     display: flex;
     overflow: hidden;
 background-color: #2c2640;}
@@ -199,12 +241,11 @@ z-index: 0  ;}
     height: auto;
     text-align: center;
     color: white;
-    padding: 20px 40px;
+    padding: 20px 7%;
     justify-content: center;
     align-items: center;}
 
-    .find-out-more > div > .work-text > h1{font-size: 12vw;
-    font-family:'Times New Roman', Times, serif;}
+
 
     .find-out-more > div > button{ border: 2px solid white;
         color: inherit;
@@ -242,13 +283,12 @@ footer > hr{margin: 10px 0px 30px;}
 
 .footer-content{    display: flex;
     flex-direction: column;
-text-align: center;
-    align-items: center;}
+text-align: center;}
 
     .footer-content-list{padding: 20px 0;
     text-transform: uppercase;}
 
-.footer-content-list > h4{color:#2c264070;
+.footer-content-list > p{color:#2c264070;
 padding: 10px 0 30px;}
 
 .footer-content-list > ul{list-style: none;
@@ -261,11 +301,27 @@ font-weight: bold;}
 color:#252130}
 
 
-/*Tablet screen  */
 
 
+/* ///////////////// */
+
+/*Tablet screen and above */
     @media screen and (min-width:508px){
         
+        h1{font-size: 3.5rem;
+            font-family:'Times New Roman', Times, serif;}
+
+            h2{font-size: 3.5rem;
+                font-family:'Times New Roman', Times, serif;}
+            h4{
+           font-size: 1.8rem;
+                font-family: 'Times New Roman', Times, serif;     
+            }
+                
+        p{font-size: 1rem;
+            line-height: 1.5;}
+ li{font-size: 1.2rem;}
+
         .pc-hero{display: block;}
 
         .mobile-hero{display: none;}
@@ -273,9 +329,7 @@ color:#252130}
         .pc-hero > header{display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px 30px;}
-
-    
+            padding: 20px 30px;}
 
             .pc-hero > header > nav > ul{display: flex;
                 align-items: center;
@@ -283,7 +337,7 @@ color:#252130}
                 gap: 40px;}
 
                 .pc-hero > header > nav > ul >li{
-                    font-size: 16px;
+                    font-size: 1.03rem;
                      text-transform: uppercase;
                      color: #2c264070;
                      font-weight: bold;
@@ -293,7 +347,7 @@ color:#252130}
     border: 2px solid #2c2640;
     color: #2c2640;
     background-color: transparent;
-    padding: 5px 10px;
+    padding: 5px 15px;
     font-size: 16px;
     text-transform: uppercase;
     font-weight: bold;
@@ -302,38 +356,114 @@ color:#252130}
   button:active{background-color: white;
             color: #2c2640;}
 
-    .pc-hero > .hero-content{height: 450px;
+    .pc-hero > .hero-content{min-height: 550px;
         width: 100%;
-        padding: 40px 55% 40px 20px;
+        padding: 40px 50% 40px 40px;
         background-color: #2c2640;
         display: flex;
         align-items: center;
         position: relative;
+          /* overflow: overlay; */
     }
-
-    .about > h1{font-size: 25px;
-        padding: 10px 0px 40px;}
-
-    .pc-hero > .hero-content > img :nth-child(2){
-        position:absolute;
+    .pc-hero > .hero-content  > img{position: absolute;}
+    .pc-hero > .hero-content  > :nth-child(2){
+        max-width:35% ;
+        right: 12%;
+        bottom: -100px;
+        
         }
 
+     .pc-hero > .hero-content  > :nth-child(3){
+           bottom: -200px;
+            left: 0;
+            z-index: 1;
+            } 
+
+      .pc-hero > .hero-content  > :nth-child(4){
+        position: absolute;
+              top: 0px;
+                right: 0;
+                }
 
     .pc-hero > .hero-content > .hero-texts{
         display: flex;
         gap: 20px;
         flex-direction: column;
+        z-index: 5;
     }
+.pc-hero > .hero-content > .hero-texts > hr{width:30%}
+
+.pc-hero > .hero-content > .hero-texts {color: white;}
 
     .pc-hero > .hero-content > .hero-texts > div > button{
         border: 2px solid white;
         color: white;
         background-color: transparent;
-        padding: 10px 15px;
+        padding: 10px 40px;
         font-size: 16px;
         text-transform: uppercase;
         font-weight: bold;
         transition: .5s; 
         }
+.body{
+    padding: 50px 40px;
+}
 
+        .about {
+            padding: 220px 20px 10px;
+        }
+
+        .about > hr{
+        text-align: left;
+        margin: 0 30px 30px;
+    width: 25%;}
+
+        .about > h2{
+            padding: 10px 0px 40px;
+        text-align: left;}
+
+        .box-flex {
+flex-direction: row;
+}
+
+.box-flex > .box {padding: 70px 5px 40px;}
+
+.box-img{display: flex;}
+
+.box-text{text-align: left;}
+
+.box-text >p{font-size: 1rem;}
+
+.find-out-more > div {
+    padding: 20px 40px;}
+
+
+.find-out-more > div > button{
+    font-size: 1rem;
+cursor: pointer;
+}
+
+    .find-out-more > div >  button:hover{
+        background-color: white;
+        color: #2c2640;
+   }
+
+footer{padding: 25px 40px;}
+
+   .footer-header {
+    flex-direction: row;
+    justify-content: space-between; 
+}
+
+.footer-header > .footer-header-icons {
+    gap: 40px;
     }
+
+    .footer-content {
+        text-align: left;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 15%;
+    }
+}
